--- a/1st_Web_App/Views/Category/Delete.cshtml
+++ b/1st_Web_App/Views/Category/Delete.cshtml
@@ -12,6 +12,11 @@
             <span asp-validation-for="Name" disabled class="text-danger"></span>
         </div>
         <div class="mb-3 row p-1">
+            <label asp-for="StockQuantity" class="p-1"> Stock Quantity </label>
+            <input asp-for="StockQuantity" class="form-control" />
+
+        </div>
+        <div class="mb-3 row p-1">
             <label asp-for="DisplayOrder" class="p-1"> Display Order</label>
             <input asp-for="DisplayOrder" class="form-control" />
             <span asp-validation-for="DisplayOrder" disabled class="text-danger"></span>
