--- a/1st_Web_App/Views/Category/Index.cshtml
+++ b/1st_Web_App/Views/Category/Index.cshtml
@@ -22,6 +22,7 @@
     <thead>
     <tr>
         <th>Category Name</th>
+        <th>Stock Quantity</th>
         <th>Display Order</th>
         <th></th>
         
@@ -32,18 +33,43 @@
         {
             <tr>
                 <td>@obj.Name</td>
+                <td>@obj.StockQuantity</td>
                 <td>@obj.DisplayOrder</td>
                 <td><div class="w-75 btn-group" role="group">
                     <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                             <i class="bi bi-pencil-square"></i>Edit
                     </a>
+                        <a asp-controller="Category" asp-action="AddToCart" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                            <i class="bi bi-pencil-square"></i>Add to Cart
+                        </a>
                         <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
                             <i class="bi bi-trash-fill"></i> Delete
                         </a>
                 </div></td>
             </tr>
         }
-
+        
     </tbody>
 </table>
+</div>
+<div id="add_cart" class="modal custom-modal fade" role="dialog">
+	<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Add Cart</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<form>
+                    <label for="quantity" Quantity:</label>
+                    <input type="text" id="quantity" name="input"><br><br>
+					<div class="submit-section">
+						<button class="btn btn-primary submit-btn">Add</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
 </div>
