--- a/1st_Web_App/Views/Shared/_Layout.cshtml
+++ b/1st_Web_App/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                             <a class="nav-link " asp-area="" asp-controller="Category" asp-action="Index">Category</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link " asp-area="" asp-controller="Cart" asp-action="Index">Cart</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
